@@ -14,7 +14,12 @@
 %% \item \code{as(<large-matrix>, "sparseMatrix")} no longer fails
 %%  when \code{prod(dim(.))} is larger than \eqn{2^{31} - 1}.
 %
-\section{Changes in version 1.2-15 (2018-08-20, svn r3282)}{
+\section{Changes in version 1.2-15 (2018-08-20, svn r3283)}{
+  \subsection{New Features}{
+    \itemize{
+      \item \code{image()} gets new optional argument \code{border.color}.
+    }
+  }
   \subsection{Bug Fixes}{
     \itemize{
       \item \code{image(Matrix(0, n,m))} now works.
